# MemuTikyok

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  kehoac.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
docs/: ANTI_DETECTION_REDROID_EVAL.md  ANTI_DETECTION_RESEARCH.md  ANTI_DETECTION_UPGRADE.md  ARCHITECTURE.md  BACKUP_RESTORE_DESIGN.md  BASE_IMAGE_MAGISK_SETUP.md  E2E_RUNBOOK.md  SENSOR_ENTROPY_REMEDIATION.md  SHAMIKO_ROOT_HIDE_TEST.md  SUPERPOWERS_INTEGRATION.md
docs/superpowers/plans/: 2026-07-08-anti-detection-completion.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adb.rs  commands.rs  crypto.rs  db.rs  e2e_real.rs  error.rs  fingerprint.rs  geo.rs  humanize.rs  lib.rs  logcap.rs  magisk.rs  main.rs  model.rs  orchestrator.rs  poller.rs  profile_ops.rs  queue.rs  runner.rs  snapshot.rs  state.rs
src-tauri/src/emulator/: mock.rs  mod.rs  mumu.rs  parser.rs
src-tauri/src/memuc/: mock.rs  mod.rs  parser.rs  real.rs
src/components/: Header.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  ConfirmDialog.tsx  DropdownMenu.tsx  Input.tsx  StateView.tsx  StatusBadge.tsx  Toaster.tsx  useModalFocusTrap.ts
src/features/dashboard/: DashboardView.tsx
src/features/instances/: BulkToolbar.tsx  CountryCell.tsx  CreateInstanceDialog.tsx  FingerprintDialog.tsx  InstanceRow.tsx  InstancesView.tsx  NoteCell.tsx
src/features/logs/: LogsView.tsx
src/features/profiles/: ProfileRow.tsx  ProfilesView.tsx
src/features/settings/: SettingsView.tsx
src/lib/: backend.ts  cn.ts  country.ts  format.test.ts  format.ts  index.ts  mockBackend.ts  tauriBackend.ts
src/store/: useInstanceStore.ts  useProfileStore.test.ts  useProfileStore.ts  useSettingsStore.test.ts  useSettingsStore.ts  useToastStore.ts
src/types/: instance.ts
