[package]
name = "mumu-play-manager"
version = "0.1.0"
description = "MuMu Play Manager — quản lý fleet máy ảo MuMu Player 12"
authors = ["MPM Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
zstd = "0.13"
aes-gcm = "0.10"
getrandom = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["process", "sync", "time", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Trích libmagisk.so (resetprop) từ Magisk APK (APK = zip).
zip = { version = "2", default-features = false, features = ["deflate"] }
# HTTP-only client cho tra IP→quốc gia (ip-api.com free = HTTP, không cần TLS/key).
reqwest = { version = "0.13", default-features = false, features = ["json"] }
shlex = "2.0.1"
tauri-plugin-dialog = "2"

[features]
# Cho phép build/test với backend giả lập, không cần MuMu thật.
mock-emulator = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
